# obey-testing-goat-superlists

./: README.md  pyproject.toml
lists/: tests.py  views.py
lists/templates/: home.html
superlists/: settings.py
tests/: conftest.py  test_functional.py
