[tool.poetry]
name = "superlists"
version = "0.1.0"
description = "Django APP coded along obeythetestinggoat.com"
authors = ["João Vitor Gutkoski Paes <joaovitorgpaes@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
selenium = "^4.8.0"
pytest-django = "^4.5.2"
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
